--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -9,90 +9,85 @@
     tools:context=".activity.CadastroActivity">
 
     <EditText
-        android:id="@+id/editTextSenha"
+        android:id="@+id/editSenhaCadastro"
         android:layout_width="281dp"
         android:layout_height="42dp"
+        android:layout_marginBottom="184dp"
         android:ems="10"
         android:hint="Digite sua senha:"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textSenhaCadastro"
         android:layout_width="181dp"
         android:layout_height="20dp"
-        android:layout_marginTop="460dp"
         android:text="Senha:"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editSenhaCadastro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNome"
+        android:id="@+id/editNomeCadastro"
         android:layout_width="281dp"
         android:layout_height="42dp"
+        android:layout_marginBottom="332dp"
         android:ems="10"
         android:hint="Digite um nome de usuário"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextEmail"
+        android:id="@+id/editEmailCadastro"
         android:layout_width="281dp"
         android:layout_height="42dp"
+        android:layout_marginBottom="256dp"
         android:ems="10"
         android:hint="Digite seu e-mail"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.407"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.599" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textEmail"
+        android:id="@+id/textEmailCadastro"
         android:layout_width="181dp"
         android:layout_height="20dp"
-        android:layout_marginTop="388dp"
         android:text="E-mail:"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editEmailCadastro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textUsuario"
+        android:id="@+id/textUsuarioCadastro"
         android:layout_width="181dp"
         android:layout_height="20dp"
-        android:layout_marginTop="312dp"
         android:text="Usuário:"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/editNomeCadastro"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageCadastro"
+        android:id="@+id/imgCadastro"
         android:layout_width="205dp"
         android:layout_height="251dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/textUsuarioCadastro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.383"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_person_add_black_24dp" />
@@ -101,13 +96,14 @@
         android:id="@+id/btnCadastrar"
         android:layout_width="274dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="100dp"
         android:background="@color/colorPrimaryDark"
+        android:onClick="validarUsuario"
         android:text="Cadastrar"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
