--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,34 +8,34 @@ android:background="@color/colorPrimary"
 tools:context=".activity.LoginActivity">
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editSenhaLogin"
         android:layout_width="290dp"
         android:layout_height="45dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="192dp"
         android:ems="10"
         android:hint="Digite a sua senha"
-        android:inputType="textPersonName"
+        android:inputType="text|textPassword"
         android:textColor="#572626"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLogin" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textSenhaLogin"
         android:layout_width="107dp"
         android:layout_height="24dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginBottom="12dp"
         android:text="Senha:"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/editSenhaLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.167"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-    android:id="@+id/imageView"
+    android:id="@+id/imgLogin"
     android:layout_width="186dp"
     android:layout_height="125dp"
     android:layout_marginTop="52dp"
@@ -46,7 +46,7 @@ tools:context=".activity.LoginActivity">
     app:srcCompat="@drawable/ic_directions_bus_black_24dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/titleLogin"
         android:layout_width="152dp"
         android:layout_height="51dp"
         android:layout_marginTop="176dp"
@@ -60,56 +60,61 @@ tools:context=".activity.LoginActivity">
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-    android:id="@+id/textView2"
-    android:layout_width="107dp"
-    android:layout_height="24dp"
-    android:layout_marginTop="260dp"
-    android:text="Usuário:"
-    android:textColor="#FFFFFF"
-    android:textSize="18sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.169"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textUsuarioLogin"
+        android:layout_width="107dp"
+        android:layout_height="24dp"
+        android:text="E-mail:"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/editEmailLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.167"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleLogin"
+        app:layout_constraintVertical_bias="0.796" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editEmailLogin"
         android:layout_width="290dp"
         android:layout_height="45dp"
-        android:layout_marginTop="296dp"
+        android:layout_marginBottom="52dp"
         android:ems="10"
-        android:hint="Digite um nome de usuário"
-        android:inputType="textPersonName"
+        android:hint="Digite seu e-mail"
+        android:inputType="textEmailAddress"
         android:textColor="#572626"
+        app:layout_constraintBottom_toTopOf="@+id/editSenhaLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.421"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-    android:id="@+id/btnLogin"
-    android:layout_width="169dp"
-    android:layout_height="54dp"
-    android:layout_marginBottom="220dp"
-    android:background="@color/btnLogin"
-    android:shadowColor="#FFFFFF"
-    android:text="Login"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.504"
-    app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/btnLogin"
+        android:layout_width="169dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/btnLogin"
+        android:onClick="logarUsuario"
+        android:shadowColor="#FFFFFF"
+        android:text="Login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.462"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editSenhaLogin" />
 
     <TextView
         android:id="@+id/textviewCadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="176dp"
+        android:layout_marginTop="16dp"
         android:onClick="abrirTelaCadastro"
         android:text="Não tem conta?Cadastre-se"
         android:textColor="#FFEEEE"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.464"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
