--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -44,15 +45,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/preco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/R$30"/>
+                android:text="@string/Valor"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/alguma_descri_o_aqui"
-                android:textColor="@color/colorSecondaryText"/>
 
         </LinearLayout>
     </LinearLayout>
@@ -65,6 +62,7 @@
         android:background="@color/colorDivider"/>
 
     <LinearLayout
+        android:id="@+id/edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
@@ -128,7 +126,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/button_background"
-        android:text="@string/seila"
+        android:text="@string/Sair"
         android:textColor="@color/colorWhite"
         android:textSize="15sp"/>
 
