--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -27,11 +27,11 @@
         app:layout_constraintTop_toTopOf="@+id/roundedImageView"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textEmailUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Nome Usuário"
+        android:text="usuario"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:textSize="16sp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toEndOf="@+id/roundedImageView"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textEmailUsuario" />
 
     <LinearLayout
         android:layout_width="0dp"
